# Proyecto-Medidas_Electronicas_I-Control_Loudness

./: .gitignore  Hola pruebaaaaaa.txt  README.md
AplicacionLoudnessControl/: loudnessESP.csv  main.py  uart.py
Notebooks/Apolo I - THD en Transitorios/: Apolo I - THD en Transitorios.ipynb
Notebooks/Controlador de Loudness/: Control de loudness.ipynb
Notebooks/Controlador de Loudness/.ipynb_checkpoints/: Control de loudness-checkpoint.ipynb
Proyecto_Medidas/a2dp_sink/main/: CMakeLists.txt  main.c  volume_control.c
